added cool ass bg

--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ p.lead {
   scroll-behavior: smooth;
 }
 
-.project-scroll>* {
+.project-scroll > * {
   flex: 0 0 auto;
   scroll-snap-align: start;
   min-width: 300px;
@@ -53,4 +53,17 @@ p.lead {
   to {
     stroke-dashoffset: 0;
   }
+}
+
+.bubble-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: block;
+  pointer-events: none;
+  z-index: -1;
+  /*filter: blur(8px);*/
+  image-rendering: pixelated;
 }
